--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;1,400&family=Yatra+One&display=swap"
       rel="stylesheet"
     />
     <link
